--- a/index.html
+++ b/index.html
@@ -4118,9 +4118,9 @@
 											<div class="sf-Overlay-kl8Z9sELIMMvtVcuRbaB sf-TopLinks-FTaBr16_Tdttkqr2_OSs"></div>
 											
 											
-											<li><a href="{offer_link}" style="color: grey; text-decoration: none;"><span rel="nofollow">Nu Compte et listes</span></a></li>
-											<li><a href="{offer_link}" style="color: grey; text-decoration: none;"><span rel="nofollow">Retour Et Les Commandes</span></a></li>
-											<li><span class="sf-TopLinks-P85WSaCVLc_4UmgwMQJt" rel="nofollow">Voiture</span></li>
+											<li><a href="{offer_link}" style="color: grey; text-decoration: none;"><span rel="nofollow">Mein Konto und Listen</span></a></li>
+											<li><a href="{offer_link}" style="color: grey; text-decoration: none;"><span rel="nofollow">Rücksendungen und Bestellungen</span></a></li>
+											<li><span class="sf-TopLinks-P85WSaCVLc_4UmgwMQJt" rel="nofollow">Auto</span></li>
 										</ul>
 									</div>
 									<div class="sf-OldHeader-L1qoqCDGcF7fMecp3DEC">
